--- a/src/main/resources/templates/events/participants.html
+++ b/src/main/resources/templates/events/participants.html
@@ -701,7 +701,7 @@
                     <tr class="row participant-info" th:each="participant : ${participantsList}"
                         th:with="participationDetails = ${participantsList.getParticipationDetailsFor(participant)}"
                         th:attrappend="data-participant=${participant.id}, data-name=${participant.name}">
-                      <td th:classappend="${not participant.hasOwnOrParentsEmail()} ? 'text-danger'">
+                      <td th:classappend="${not participant.hasOwnOrParentsEmail()} or ${participant.hasHealthImpairments()} ? 'text-danger'">
                         <a href="../persons/personDetails.html" class="no-link-deco"
                            th:href="@{/persons/{id}(id=${participant.id})}"
                            th:text="${participant.name}">
@@ -711,6 +711,13 @@
                                data-placement="bottom" data-container="body"
                                data-title="Weder für den/die Teilnehmende, noch für die Eltern ist eine E-Mail Addresse hinterlegt. E-Mails werden an ihn/sie nicht versendet werden!">
                           <span class="glyphicon glyphicon-warning-sign"></span>
+                        </small>
+                        
+                        <small th:if="${participant.hasHealthImpairments()}"
+                        			 data-toggle="tooltip"
+                        			 data-placement="bottom" data-container="body"
+                        			 data-title="Informationen zu Allergien und Unverträglichkeiten vorhanden!">
+                        	<span class="glyphicon glyphicon-warning-cutlery"></span>
                         </small>
 
                         <small class="text-warning"
